--- a/xmind/pom.xml
+++ b/xmind/pom.xml
@@ -33,6 +33,12 @@
             <artifactId>xmindjbehaveplugin</artifactId>
             <version>0.8</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.codehaus.plexus</groupId>
+            <artifactId>plexus-utils</artifactId>
+            <version>3.4.1</version>
+        </dependency>
     </dependencies>
 
     <build>
